# rocket-auth0-api

./: .env.example  .gitignore
rocket-auth0-api/: Cargo.toml  Rocket.toml
rocket-auth0-api/src/: api.rs  main.rs  protected.rs  routes.rs
rocket-auth0-api/src/auth/: authsettings.rs  mod.rs
