[package]
name = "rocket-auth0-api"
version = "0.1.0"
authors = ["Johannes Katajamäki <jkatajamki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.7"
rocket_contrib = "0.4.7"
